# image_processor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gaussian_blur.cpp  grayscale.cpp  grayscale.h  matrix.cpp  matrix.h  my_filter.cpp  my_filter.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
image_processor/image_info/: colour.cpp  colour.h  image.cpp  image.h
image_processor/read_export/: reader.cpp
image_processor/test_script/: test_image_processor.py
